<resources>
    <string name="app_name">Daily Inspiration</string>
    <string name="general">General</string>
    <string name="themes">Themes</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="abcd">Abcd</string>
    <string name="edit">Edit</string>
    <string name="editContent">Edit Content</string>

    <string name="random">Random</string>
    <string name="new_theme">New theme</string>
    <string name="setting">SETTINGS</string>
    <string name="YOUR_AFFIRMATIONS">YOUR AFFIRMATIONS</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="MixCategory">Mix Category</string>
    <string name="background_edit">BackGround Editing</string>
    <string name="background">Background</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="unSplash">UnSplash</string>
    <string name="textLibrary">This application can only access the photos you choose</string>
    <string name="widgets">Widgets</string>
    <string name="step1">Step 1</string>
    <string name="step1_text">On your home screen, pinch together two fingers.</string>
    <string name="step2">Step 2</string>
    <string name="step2_text">Tap widgets.</string>
    <string name="step3">Step 3</string>
    <string name="step3_text">Look for the Daily widgets in the list and select the one you are interested in.</string>
    <string name="step4_text">Customize your widget to your taste and add it.</string>
    <string name="step4">Step 4</string>
    <string name="Reminders">Reminders</string>
    <string name="reminders_title">Set up your daily reminders to make your affimations fit your rountines.</string>
    <string name="notification_not_work">Notifications is not working ?</string>
    <string name="Daily_practice_reminder">Daily practice reminder</string>
    <string name="Daily_writing_reminder">Daily writing reminder</string>
    <string name="every_weekday">Every weekday</string>
    <string name="collections">Collections</string>
    <string name="add_new">Add new</string>
    <string name="added">Added</string>
    <string name="add">Add</string>
    <string name="favorites">Favorites</string>
    <string name="my_new_collections">My new collection</string>
    <string name="text_editing">Text Editing</string>
    <string name="collections_content">Write a name for your new collection. You can rename it later.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="iam">I Am</string>
    <string name="viewAll">ViewAll</string>

    <string name="unsplash">UnSplash</string>
    <string name="iAm">I Am</string>

    <string name="library">Library</string>
    <string name="color">Color</string>
    <string name="delete">Delete</string>
    <string name="deleteContent">Delete Content</string>
    <string name="select">Select</string>
    <string name="affirmations">Affirmations</string>

    <string name="foregroundService">Foreground Service</string>
    <string name="running">Running...</string>
    <string name="foregroundServiceChannel">Foreground Service Channel</string>

    <string name="privacy_policy_text">
    <![CDATA[
        <b>1. Collect information</b>
        <br/>
        We collect personal information from users when they register or submit information through our application.
        <br/>
        Personal information may include name, email address, phone number and address.
        <br/><br/>
        <b>2. Use information</b>
        <br/>
        We use personal information collected to respond to user requests
       , providing services and communicating with users regarding matters related to our application
        or other services we provide.
        <br/><br/>
        <b>3. Information security</b>
        <br/>
         We take appropriate security measures to protect personal information
         users against unauthorized access, loss or unwanted disclosure.
         However, no method of communication over the Internet or method of electronic storage is completely secure.
        <br/><br/>

        <b>4. Share information</b>
        <br/>
      We do not sell,
      exchange or share personal information
      of users with third parties unless otherwise expressly agreed
      of the user or as required by law.
        <br/><br/>
        <b>5. Cookie</b>
        <br/>
      We may use cookies to improve user experience.
        Users can refuse cookies or
         set alerts when cookies are sent.
       However, refusing cookies may limit some of the app features.
        <br/><br/>
        <b>6. Policy changes</b>
        <br/>
       We reserve the right to update or change this Privacy Policy at any time.
         Any changes will be notified on the application and take effect immediately.
        <br/><br/>
        <b>7. Contact</b>
        <br/>
        If you have any questions or requests about our Privacy Policy,
         please contact us.
    ]]>
</string>
    <string name="message_purchase_one">%s</string>

</resources>