<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:weightSum="3"
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/collections"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvName"
        android:padding="20dp"
        android:textSize="18dp"
        android:text="@string/collections_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="20dp"
        android:background="@drawable/background_custom"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <EditText
            android:id="@+id/edtAdd"
            android:paddingStart="15dp"
            android:hint="@string/my_new_collections"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="18dp"
        android:textAllCaps="false"
        android:id="@+id/btnSave"
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_margin="15dp"
        android:background="@drawable/custom_bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>