<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:id="@+id/llHeader"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="15dp"
            android:id="@+id/ivBack"
            android:src="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_margin="15dp"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:text="Write a name for your new collection. You can rename it later."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/background_custom">
        <EditText
            android:paddingStart="15dp"
            android:textColor="#B0B0B0"
            android:hint="@string/my_new_collections"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="text"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_margin="15dp"
        android:background="@drawable/custom_bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>