<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:id="@+id/llHeader"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="15dp"
            android:id="@+id/ivBack"
            android:src="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/text_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <TextView
            android:id="@+id/tvCancel"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/tvCancel"
            app:layout_constraintEnd_toStartOf="@id/tvSave"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <com.google.android.material.tabs.TabLayout
                android:layout_gravity="center"
                android:id="@+id/tabLayout"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                app:tabMode="fixed"
                android:textAllCaps="false"
                app:tabIndicatorColor="@color/light_blue_600"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tvSave"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingEnd="20dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingStart="20dp"
            android:id="@+id/tvNameEdit"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:text="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="183dp"
            android:paddingRight="183dp" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListItem"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>